feat: modify text

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -7,7 +7,7 @@
   <p>短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。全機能を無料でご利用いただけます。</p>
   <h5 class="mt-4">寄付のお願い</h5>
   <p><a href="https://buy.stripe.com/cN25meehQb2jaQgaEE" target="_blank">こちらの寄付画面</a>から500円単位で数量を指定してUtakataに寄付いただけます。寄付のお願いについて詳しくは<%= link_to 'こちら', donations_path %>のページに記載しています。</p>
-  <h5 id="twitter-login" class="mt-4">Twitter連携ログイン機能の廃止とメールアドレスログインへの移行について</h5>
+  <h5 id="twitter-login" class="mt-4">Twitter連携ログイン機能の廃止に伴うメールアドレスログインへの移行のお願い</h5>
   <p>TwitterのAPI提供方針の変更により、Twitter連携ログイン機能の利用ができなくなったため、メールアドレスログインへの移行をお願いしたいです。以下の2つの情報を<a href="#contacts">下記連絡先</a>までご連絡いただき、管理人によるデータ移行作業後、Utakataのパスワード設定画面をご案内する流れで、メールアドレスログインに移行できます。</p>
   <ul class="ml">
     <li>移行を希望するUtakataアカウントのマイページのURL</li>
