--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -8,12 +8,12 @@
   <h5 class="mt-4">寄付のお願い</h5>
   <p><a href="https://buy.stripe.com/cN25meehQb2jaQgaEE" target="_blank">こちらの寄付画面</a>から500円単位で数量を指定してUtakataに寄付いただけます。寄付のお願いについて詳しくは<%= link_to 'こちら', donations_path %>のページに記載しています。</p>
   <h5 id="twitter-login" class="mt-4">Twitter連携ログイン機能の廃止に伴うメールアドレスログインへの移行のお願い</h5>
-  <p>TwitterのAPI提供方針の変更により、Twitter連携ログイン機能の利用ができなくなったため、メールアドレスログインへの移行をお願いしたいです。以下の2つの情報を<a href="#contacts">下記連絡先</a>までご連絡いただき、管理人によるデータ移行作業後、Utakataのパスワード設定画面をご案内する流れで、メールアドレスログインに移行できます。</p>
+  <p>TwitterのAPI提供方針の変更により、Twitter連携ログイン機能の利用ができなくなったため、メールアドレスログインへの移行をお願いします。以下の2つの情報を<a href="#contacts">下記連絡先</a>までご連絡いただき、管理人によるデータ移行作業後、Utakataのパスワード設定画面をご案内する流れで、メールアドレスログインに移行できます。</p>
   <ul class="ml">
     <li>移行を希望するUtakataアカウントのマイページのURL</li>
     <li>移行後のログインに利用するメールアドレス</li>
   </ul>
-  <p>なお、ログイン方式の移行の期限を<b>2023/12/31</b>までとします。その後、メールアドレスログインに未移行のTwiiter連携ログインアカウントについては、投稿短歌のデータを含めて削除する予定です。こちら所有者の確認できないデータを残しておくのは、サイト運営の観点で不適切との判断によるものです。ログイン方式の移行へのご協力をよろしくお願いします。</p>
+  <p>なお、ログイン方式の移行の期限を<b>2023/12/31</b>までとします。その後、メールアドレスログインに未移行のTwiiter連携ログインアカウントについては、投稿短歌のデータを含めて削除する予定です。これは所有者の確認できないデータを残しておくのは、サイト運営の観点で望ましくないとの判断によるものです。ログイン方式の移行へのご協力をよろしくお願いします。</p>
   <h5 id="misspelling" class="mt-4">アカウント登録時の注意点</h5>
   <p>メールアドレスにスペルミスがあると、確認用メールが届かずアカウント登録できないのでご注意ください。確認用メールが届かない場合は、もう一度正しいメールアドレスで<%= link_to 'アカウント登録', new_user_registration_path %>を行ってください。</p>
   <h5 class="mt-4">利用規約・プライバシーポリシー</h5>
