--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -13,7 +13,7 @@
     <li>移行を希望するUtakataアカウントのマイページのURL</li>
     <li>移行後のログインに利用するメールアドレス</li>
   </ul>
-  <p>なお、ログイン方式の移行の期限を<b>2023/12/31</b>までとします。その後、メールアドレスログインに未移行のTwiiter連携ログインアカウントについては、投稿短歌のデータを含めて削除する予定です。これは所有者の確認できないデータを残しておくのは、サイト運営の観点で望ましくないとの判断によるものです。ログイン方式の移行へのご協力をよろしくお願いします。</p>
+  <p>なお、ログイン方式の移行の期限を<b>2023/12/31</b>までとします。その後、メールアドレスログインに未移行のTwitter連携ログインアカウントについては、投稿短歌のデータを含めて削除する予定です。これは所有者の確認できないデータを残しておくのは、サイト運営の観点で望ましくないとの判断によるものです。ログイン方式の移行へのご協力をよろしくお願いします。</p>
   <h5 id="misspelling" class="mt-4">アカウント登録時の注意点</h5>
   <p>メールアドレスにスペルミスがあると、確認用メールが届かずアカウント登録できないのでご注意ください。確認用メールが届かない場合は、もう一度正しいメールアドレスで<%= link_to 'アカウント登録', new_user_registration_path %>を行ってください。</p>
   <h5 class="mt-4">利用規約・プライバシーポリシー</h5>
