feat: use G tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <% if Rails.env.production? %>
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-27037997-2" data-turbo-track="reload"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-PB35HE8YLS" data-turbo-track="reload"></script>
     <% end %>
   </head>
   <body>
