fix: remove unnesecessary div

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -75,7 +75,7 @@
     </div>
     <% end %>
     <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
-      <%= link_to 'アカウントを削除する', registration_path(resource_name), class: 'mt-3 btn btn-primary', data: { turbo_confirm: 'アカウントを削除すると、投稿した短歌もすべて削除されます。本当に削除しますか？', turbo_method: :delete } %></div>
+      <%= link_to 'アカウントを削除する', registration_path(resource_name), class: 'mt-3 btn btn-primary', data: { turbo_confirm: 'アカウントを削除すると、投稿した短歌もすべて削除されます。本当に削除しますか？', turbo_method: :delete } %>
     </div>
   </div>
 </div>
