--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,8 +4,8 @@
   <%= form_for(@post, url: { controller: :posts, action: :create }) do |f| %>
     <div class="mb-3 mt-3">
       <ul class="sm">
-        <p class="description"><b>ルビ</b>：ルビを振りたい文字列を選択して、「ルビ」ボタンをタップし、&lt;rt&gt;〜&lt;/rt&gt;の間にルビを入力してください。<a href="../../about#ruby">→Help</a></p>
-        <p class="description"><b>縦中横</b>：縦中横にしたい文字列を選択して、「縦中横」ボタンをタップしてください。</p>
+        <p class="description"><b>ルビ</b>：ルビを振りたい文字を範囲選択して、「ルビ」ボタンを押し、&lt;rt&gt;〜&lt;/rt&gt;の間にルビを入力してください。</br><b>例</b>：&lt;ruby&gt;漢字&lt;rt&gt;ルビ&lt;/rt&gt;&lt;/ruby&gt;</p>
+        <p class="description"><b>縦中横</b>：縦中横にしたい文字を範囲選択して、「縦中横」ボタンを押してください。</p>
       </ul>
       <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', 'data-post-target': 'input', 'data-action': 'keyup->post#previewPost compositionend->post#previewPost' %>
     </div>
