--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -38,6 +38,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2024/05/02</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>投稿フォームのルビの振り方の説明を変更</li>
+      </ul>
+    </dd>
     <dt><time>2024/03/03</time></dt>
     <dd>
       <ul class="ml">
