feat: modify donations text

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -41,7 +41,8 @@
     <dt><time>2024/05/02</time></dt>
     <dd>
       <ul class="ml">
-        <li>投稿フォームのルビの振り方の説明を変更</li>
+        <li>投稿フォームの文言を調整</li>
+        <li>「寄付のお願い」の文言を調整</li>
       </ul>
     </dd>
     <dt><time>2024/03/03</time></dt>
@@ -96,7 +97,7 @@
     <dt><time>2022/12/28</time></dt>
     <dd>
       <ul class="ml">
-        <li>寄付のお願いの文言を調整</li>
+        <li>「寄付のお願い」の文言を調整</li>
       </ul>
     </dd>
     <dt><time>2022/11/14</time></dt>
