feat: modify text

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -16,7 +16,7 @@
   </ul>
   <h4 class="mt-4">Utakataの使い方</h4>
   <h5 id="ruby" class="mt-4">ルビの振り方</h5>
-  <p>短歌投稿フォームでルビを振りたい文字列を選択して、「ルビ」ボタンをタップすると、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
+  <p>短歌投稿フォームでルビを振りたい文字を範囲選択して、「ルビ」ボタンをタップすると、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
   <p><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rt&gt;ルビ&lt;/rt&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
   <p>※ &lt;rp&gt;タグは内部的に自動で補完されるので入力不要です。</p>
   <h5 class="mt-4">短歌の編集</h5>
