fix: use x.com instead of twitter.com

--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -6,7 +6,7 @@
   <h5 class="mt-4">はじめに</h5>
   <p>Utakataは、管理人が個人で開発・運営しているWebサービスです。管理人もまた短歌愛好家であり、Utakataは、自由な創作を重んじる精神で運営したいと思っています。本規約には、最低限のマナーと著作権に関する内容を記載します。本規約に同意した上で、サービスをご利用ください。本規約は、予告なく改定されることがあります。</p>
   <h5 class="mt-4">著作権</h5>
-  <p>投稿短歌の著作権は投稿者に帰属します。原則として、投稿短歌を管理者が投稿者に無断で利用することはありませんが、<a href="https://twitter.com/utakatanka" target="_blank">Twitterの公式アカウント</a>で、人気の短歌を作者名と作品へのリンクを明記の上、紹介させていただくことがあります。公式アカウントでの自作のツイートを希望されない方は、<a href="#contacts">下記連絡先</a>までご連絡ください。</p>
+  <p>投稿短歌の著作権は投稿者に帰属します。原則として、投稿短歌を管理者が投稿者に無断で利用することはありませんが、<a href="https://x.com/utakatanka" target="_blank">Twitterの公式アカウント</a>で、人気の短歌を作者名と作品へのリンクを明記の上、紹介させていただくことがあります。公式アカウントでの自作のツイートを希望されない方は、<a href="#contacts">下記連絡先</a>までご連絡ください。</p>
   <h5 class="mt-4">違反行為</h5>
   <p>下記の行為を利用規約違反とします。違反行為が確認された場合は、管理者の判断で、違反行為に該当する短歌や、違反者のアカウントを予告なく削除することがあります。</p>
   <ul class="ml">
@@ -22,8 +22,8 @@
   <h5 id="contacts" class="mt-4">連絡先</h5>
   <ul class="ml">
     <li>Email：<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a></li>
-    <li>Twitter：<a href="https://twitter.com/utakatanka" target="_blank">@utakatanka</a></li>
-    <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
+    <li>Twitter：<a href="https://x.com/utakatanka" target="_blank">@utakatanka</a></li>
+    <li>管理人のTwitter：<a href="https://x.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
   <h5 class="mt-4">関連リンク</h5>
   <ul class="ml">
