--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -33,8 +33,8 @@
   <p class="mt-3">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
   <ul class="ml">
     <li>Email：<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a></li>
-    <li>Twitter：<a href="https://twitter.com/utakatanka" target="_blank">@utakatanka</a></li>
-    <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
+    <li>Twitter：<a href="https://x.com/utakatanka" target="_blank">@utakatanka</a></li>
+    <li>管理人のTwitter：<a href="https://x.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
