feat: modify toast style

--- a/app/views/layouts/_toast.html.erb
+++ b/app/views/layouts/_toast.html.erb
@@ -9,7 +9,7 @@
     <% end %>
     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
-  <div class="toast-body">
+  <div class="toast-body rounded">
     <%= message %>
   </div>
 </div>
