--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -38,6 +38,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2024/09/07</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>トーストメッセージのスタイルを調整</li>
+      </ul>
+    </dd>
     <dt><time>2024/07/28</time></dt>
     <dd>
       <ul class="ml">
@@ -411,7 +417,7 @@
     <dt><time>2020/01/05</time></dt>
     <dd>
       <ul class="ml">
-        <li>ポップアップメッセージのスタイルを変更</li>
+        <li>トーストメッセージのスタイルを変更</li>
         <li>各種エラー処理を改善</li>
       </ul>
     </dd>
