--- a/app/views/layouts/_toast.html.erb
+++ b/app/views/layouts/_toast.html.erb
@@ -1,4 +1,4 @@
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast m-1" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="toast-header">
     <img src="https://utakata.s3.amazonaws.com/icons/favicon-32x32.png" class="rounded me-2" alt="Utakataアイコン">
     <strong class="me-auto">Utakata</strong>
