--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,20 +2,23 @@
 <% @description = 'Utakataの新着短歌。' %>
 
 <div class="vertical serif tanka-index text-nowrap mt-4">
-  <ul class="nav nav-tabs vertical-tab">
-    <li class="nav-item">
-      <a class="nav-link active vertical-tab">新しい歌</a>
-    </li>
-    <li class="nav-item">
-      <%= link_to '人気の歌', root_path, class: 'nav-link vertical-tab text-secondary' %>
-    </li>
-    <% unless user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to 'サイトのご案内', about_index_path, class: 'nav-link vertical-tab text-secondary' %>
-      </li>
-    <% end %>
+  <div class="d-flex align-items-start me-4">
+    <div class="toggle-button-group rounded">
+      <button class="toggle-button selected">新しい歌</button>
+      <button class="toggle-button">
+        <%= link_to '人気の歌', root_path, class: 'text-secondary' %>
+      </button>
+    </div>
     <%= paginate @posts %>
-  </ul>
+  </div>
   <%= render 'posts/posts', posts: @posts, show_avatar: true %>
-  <%= paginate @posts %>
+    <div class="d-flex align-items-start ms-4">
+    <div class="toggle-button-group rounded">
+      <button class="toggle-button selected">新しい歌</button>
+      <button class="toggle-button">
+        <%= link_to '人気の歌', root_path, class: 'text-secondary' %>
+      </button>
+    </div>
+    <%= paginate @posts %>
+  </div>
 </div>
