--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,23 +2,18 @@
 <% @description = 'Utakataの新着短歌。' %>
 
 <div class="vertical serif tanka-index text-nowrap mt-4">
-  <div class="d-flex align-items-start me-4">
-    <div class="toggle-button-group rounded">
+  <div class="d-flex align-items-start fixed">
+    <div class="toggle-button-group rounded me-4">
       <button class="toggle-button selected">新しい歌</button>
       <button class="toggle-button">
         <%= link_to '人気の歌', root_path, class: 'text-secondary' %>
       </button>
     </div>
+    <div class="me-4">
     <%= paginate @posts %>
+    </div>
   </div>
-  <%= render 'posts/posts', posts: @posts, show_avatar: true %>
-    <div class="d-flex align-items-start ms-4">
-    <div class="toggle-button-group rounded">
-      <button class="toggle-button selected">新しい歌</button>
-      <button class="toggle-button">
-        <%= link_to '人気の歌', root_path, class: 'text-secondary' %>
-      </button>
-    </div>
-    <%= paginate @posts %>
+  <div class='me-6'>
+    <%= render 'posts/posts', posts: @posts, show_avatar: true %>
   </div>
 </div>
