--- a/app/views/posts/popular/index.html.erb
+++ b/app/views/posts/popular/index.html.erb
@@ -1,6 +1,6 @@
 <div class="vertical serif tanka-index text-nowrap mt-4">
-  <div class="d-flex align-items-start fixed">
-    <div class="toggle-button-group rounded me-4">
+  <div class="d-flex align-items-start me-4">
+    <div class="toggle-button-group rounded">
       <button class="toggle-button">
         <%= link_to '新しい歌', posts_path, class: 'text-secondary' %>
       </button>
@@ -8,7 +8,14 @@
     </div>
     <%= paginate @posts %>
   </div>
-  <div class='me-6'>
-    <%= render 'posts/posts', posts: @posts, show_avatar: true %>
+  <%= render 'posts/posts', posts: @posts, show_avatar: true %>
+    <div class="d-flex align-items-start ms-4">
+    <div class="toggle-button-group rounded">
+      <button class="toggle-button">
+        <%= link_to '新しい歌', posts_path, class: 'text-secondary' %>
+      </button>
+      <button class="toggle-button selected">人気の歌</button>
+    </div>
+    <%= paginate @posts %>
   </div>
 </div>
