--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -38,6 +38,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-4">
+    <dt><time>2025/02/11</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>レイアウトを調整</li>
+      </ul>
+    </dd>
     <dt><time>2024/11/17</time></dt>
     <dd>
       <ul class="ml">
