--- a/app/views/posts/followers/index.html.erb
+++ b/app/views/posts/followers/index.html.erb
@@ -2,7 +2,11 @@
 
 <div class = "vertical serif tanka-index text-nowrap mt-4">
   <%= render 'posts/post', post: @post, show_avatar: true %>
-  <%= paginate @users %>
+  <div class="mx-4">
+    <%= paginate @users %>
+  </div>
   <%= render 'users/users', users: @users %>
-  <%= paginate @users %>
+  <div class="mx-4">
+    <%= paginate @users %>
+  </div>
 </div>
