--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,7 +37,7 @@
         <% else %>
           <li class="nav-item form-inline">
         <% end %>
-          <%= link_to '投稿する', new_post_path, class: 'btn btn-sm btn-primary-reversed' %>
+          <%= link_to '投稿する', new_post_path, class: 'btn btn-primary-reversed h-35px' %>
         </li>
       </ul>
     <% else %>
