--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <% @title = '歌人一覧' %>
 
 <div class = "vertical serif tanka-index text-nowrap mt-4">
-  <h6>歌人一覧</h6>
+  <div class="mx-4 sans-serif">歌人一覧</div>
   <div class="mx-4">
     <%= paginate @users %>
   </div>
