--- a/app/views/posts/popular/index.html.erb
+++ b/app/views/posts/popular/index.html.erb
@@ -1,6 +1,6 @@
 <div class="vertical serif tanka-index text-nowrap mt-4">
   <div class="d-flex align-items-start mx-4">
-    <div class="toggle-button-group rounded mb-4 sans-serif">
+    <div class="toggle-button-group rounded mb-4">
       <button class="toggle-button">
         <%= link_to '新しい歌', posts_path, class: 'text-secondary' %>
       </button>
@@ -10,7 +10,7 @@
   </div>
   <%= render 'posts/posts', posts: @posts, show_avatar: true %>
   <div class="d-flex align-items-start mx-4">
-    <div class="toggle-button-group rounded mb-4 sans-serif">
+    <div class="toggle-button-group rounded mb-4">
       <button class="toggle-button">
         <%= link_to '新しい歌', posts_path, class: 'text-secondary' %>
       </button>
