feat: modify styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,6 +82,11 @@ a:hover {
   border-color: $utakata-green-hover;
 }
 
+.btn-sm {
+  font-size: 1rem;
+  height: 35px;
+}
+
 .description {
   margin-left: -2rem;
   margin-bottom: 0.5rem;
