--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
             <%= link_to 'データ管理', exports_path, class: 'dropdown-item' %>
             <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
-            <%= link_to 'ご案内', about_index_path, class: 'dropdown-item' %>
+            <%= link_to 'サイトのご案内', about_index_path, class: 'dropdown-item' %>
             <%= link_to '寄付のお願い', donations_path, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <div class="px-2 py-2">
@@ -50,6 +50,9 @@
         </li>
         <li class="nav-item active">
           <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to 'サイトのご案内', about_index_path, class: 'nav-link' %>
         </li>
       </ul>
     <% end %>
