--- a/app/views/posts/search/index.html.erb
+++ b/app/views/posts/search/index.html.erb
@@ -1,24 +1,29 @@
 <% @title = "「#{@keyword}」で短歌を検索" %>
 
 <div class = "vertical serif tanka-index text-nowrap mt-4">
-  <ul class="nav nav-tabs vertical-tab">
-    <li class="nav-item">
-      <a class="nav-link active vertical-tab">短歌</a>
-    </li>
-    <% if current_user %>
-      <li class="nav-item">
-        <%= link_to '自分の短歌', posts_my_search_index_path(keyword: @keyword), class: 'nav-link vertical-tab text-secondary' %>
-      </li>
-    <% end %>
-    <li class="nav-item">
-      <%= link_to '歌人', users_search_index_path(keyword: @keyword), class: 'nav-link vertical-tab text-secondary' %>
-    </li>
-  </ul>
-  <div class="mx-4">
-    <%= paginate @posts %>
+  <div class="d-flex align-items-start mx-4">
+    <div class="toggle-button-group rounded mb-4">
+      <button class="toggle-button selected">短歌</button>
+      <button class="toggle-button">
+        <%= link_to '自分の短歌', posts_my_search_index_path(keyword: @keyword), class: 'text-secondary' %>
+      </button>
+      <button class="toggle-button">
+        <%= link_to '歌人', users_search_index_path(keyword: @keyword), class: 'text-secondary' %>
+      </button>
+      <%= paginate @posts %>
+    </div>
   </div>
   <%= render 'posts/posts', posts: @posts, show_avatar: true %>
-  <div class="mx-4">
-    <%= paginate @posts %>
+  <div class="d-flex align-items-start mx-4">
+    <div class="toggle-button-group rounded mb-4">
+      <button class="toggle-button selected">短歌</button>
+      <button class="toggle-button">
+        <%= link_to '自分の短歌', posts_my_search_index_path(keyword: @keyword), class: 'text-secondary' %>
+      </button>
+      <button class="toggle-button">
+        <%= link_to '歌人', users_search_index_path(keyword: @keyword), class: 'text-secondary' %>
+      </button>
+      <%= paginate @posts %>
+    </div>
   </div>
 </div>
