feat: アイコンのデザインを調整

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,19 +12,11 @@
     <div>
       <%= @post.published_at.strftime('%Y.%-m.%-d %-H:%M') %>
     </div>
-    <div>
+    <div class="my-1">
       <a href="<%= @twitter_share_url %>" target="_blank" rel="noopener noreferrer">
         <i class="lg bi bi-twitter bi-vertical"></i>
       </a>
     </div>
-    <% if current_user && current_user.id == @user.id %>
-      <div>
-        <%= link_to content_tag(:i, '', class: "lg bi bi-pencil bi-vertical"), edit_post_path(@post) %>
-      </div>
-      <div>
-        <%= link_to content_tag(:i, '', class: "lg bi bi-trash bi-vertical"), post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' } %>
-      </div>
-    <% end %>
     <% if current_user && current_user.id != @post.user_id %>
       <% if current_user.following?(@post) %>
         <%= render 'favorites/unlike', post: @post, size: 'lg' %>
@@ -37,6 +29,14 @@
       </div>
     <% end %>
     <%= render 'favorites/favorites_count', post: @post, size: 'lg' %>
+    <% if current_user && current_user.id == @user.id %>
+      <div class="my-1">
+        <%= link_to content_tag(:i, '', class: "lg bi bi-pencil bi-vertical"), edit_post_path(@post) %>
+      </div>
+      <div class="my-1">
+        <%= link_to content_tag(:i, '', class: "lg bi bi-trash bi-vertical"), post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' } %>
+      </div>
+    <% end %>
   </div>
   <p class="lg"><%= @post.tanka.html_safe %></p>
 </div>
