--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -16,18 +16,18 @@
   </ul>
   <h4 class="mt-4">Utakataの使い方</h4>
   <h5 id="ruby" class="mt-4">ルビの振り方</h5>
-  <p>短歌投稿フォームでルビを振りたい文字を範囲選択して、「ルビ」ボタンをタップすると、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
+  <p>短歌投稿フォームでルビを振りたい文字を範囲選択して、「ルビ」ボタンを押すと、ルビ用のHTMLタグが挿入されます。カーソルが自動で&lt;rt&gt;〜&lt;/rt&gt;の間にセットされるので、そのままルビを入力してください。</p>
   <p><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rt&gt;ルビ&lt;/rt&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
   <p>※ &lt;rp&gt;タグは内部的に自動で補完されるので入力不要です。</p>
   <h5 class="mt-4">短歌の編集</h5>
-  <p>個別短歌のページ（短歌の本文をタップすると表示されるページ）から「編集」をタップすると、短歌の編集ができます。短歌本文の修正や、投稿日時の変更を行えます。</p>
+  <p>個別短歌のページ（短歌の本文を押すと表示されるページ）から鉛筆アイコンを押すと、短歌の編集ができます。短歌本文の修正や、投稿日時の変更を行えます。</p>
   <h5 class="mt-4">Twitterに短歌をシェアする方法</h5>
-  <p>個別短歌のページで、作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
+  <p>個別短歌のページで、作者名の下にあるTwitterアイコンを押すと、Twitterに短歌をシェアすることができます。</p>
   <h5 class="mt-4">短歌にいいねした人の一覧を見る方法</h5>
-  <p>個別投稿のページで、ハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
+  <p>個別投稿のページで、ハートの下の数字を押すと、短歌にいいねした人の一覧を見ることができます。</p>
   <h5 class="mt-4">検索フォームで何も文字を打たずに検索すると…</h5>
   <p>歌人の一覧が表示されます。</p>
-  <h5 class="mt-4">左上のUtakataロゴをタップすると…</h5>
+  <h5 class="mt-4">左上のUtakataロゴを押すと…</h5>
   <p>新着短歌の一覧が表示されます。</p>
   <h4 id="contacts" class="mt-4">連絡先</h4>
   <p class="mt-4">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
@@ -649,7 +649,7 @@
     <dt><time>2018/09/27</time></dt>
     <dd>
       <ul class="ml">
-        <li>通知画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページを表示するように変更</li>
+        <li>通知画面でいいねされた短歌を押した場合に、いいねした人の一覧ページを表示するように変更</li>
       </ul>
     </dd>
     <dt><time>2018/09/13</time></dt>
