--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,5 +1,7 @@
 <p><%= @resource.name %>様</p>
 
-<p>下記のリンクからパスワードを再設定できます。</p>
+<p>下のリンクからパスワードを再設定できます。</p>
 
 <p><%= link_to 'パスワードを再設定する', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+<p>短歌投稿サイトUtakata
