feat: separate welcome message and instructions in confirmation email for improved clarity

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,3 +1,5 @@
-<p>短歌投稿サイトUtakataへようこそ。ご利用開始の前に、下のリンクをクリックして、メールアドレスの確認をしてください。</p>
+<p>短歌投稿サイトUtakataへようこそ。</p>
+
+<p>ご利用開始の前に、下のリンクをクリックして、メールアドレスの確認をしてください。</p>
 
 <p><%= link_to 'メールアドレスを確認する', confirmation_url(@resource, confirmation_token: @token) %></p>
