--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <p>短歌投稿サイトUtakataへようこそ。</p>
 
-<p>ご利用開始の前に、下のリンクをクリックして、メールアドレスの確認をしてください。</p>
+<p>ご利用開始の前に、下のリンクをクリックして、メールアドレスを確認してください。</p>
 
 <p><%= link_to 'メールアドレスを確認する', confirmation_url(@resource, confirmation_token: @token) %></p>
